# newton-fractal-generator

./: .gitignore  CMakeLists.txt  Makefile  README.md  Starter.ispc  complexISPC.h  complexISPC.ispc  complexISPC.isph  gui_newton.cpp  hello  imgui.ini  ispc_tasksys_min.cpp  main  main.cpp  newton  newton.cpp  newtonApprox.h  newtonApprox.ispc  render_newton.cpp  render_newton.h  starter
src/: newton.cpp  newtonApprox.h  newtonApprox.ispc
